@@ -1,19 +1,21 @@
 /*
- * Copyright (c) 2022-2023. [DarkCube]
+ * Copyright (c) 2022-2024. [DarkCube]
  * All rights reserved.
  * You may not use or redistribute this software or any associated files without permission.
  * The above copyright notice shall be included in all copies of this software.
  */
+
 package eu.darkcube.minigame.woolbattle.listener.ingame;
 
 import eu.darkcube.minigame.woolbattle.WoolBattleBukkit;
 import eu.darkcube.minigame.woolbattle.listener.Listener;
 import eu.darkcube.minigame.woolbattle.perk.perks.active.WoolBombPerk;
 import eu.darkcube.minigame.woolbattle.user.WBUser;
-import org.bukkit.Location;
-import org.bukkit.block.Block;
 import org.bukkit.craftbukkit.v1_8_R3.entity.CraftFallingSand;
-import org.bukkit.entity.*;
+import org.bukkit.entity.EntityType;
+import org.bukkit.entity.Player;
+import org.bukkit.entity.Snowball;
+import org.bukkit.entity.TNTPrimed;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.block.BlockExplodeEvent;
 import org.bukkit.event.entity.EntityDamageByBlockEvent;
@@ -29,49 +31,49 @@ public class ListenerExplode extends Listener<EntityExplodeEvent> {
         this.woolbattle = woolbattle;
     }
 
-    @Override @EventHandler public void handle(EntityExplodeEvent e) {
-        Location mid = e.getEntity().getLocation();
-        double x = mid.getX();
-        double y = mid.getY();
-        double z = mid.getZ();
-        for (Block b : e.blockList()) {
+    @Override
+    @EventHandler
+    public void handle(EntityExplodeEvent e) {
+        var mid = e.getEntity().getLocation();
+        var x = mid.getX();
+        var y = mid.getY();
+        var z = mid.getZ();
+        for (var b : e.blockList()) {
             if (woolbattle.ingame().destroy(b)) {
-                @SuppressWarnings("deprecation") FallingBlock block = b
-                        .getWorld()
-                        .spawnFallingBlock(b.getLocation().add(0.5, 0.5, 0.5), b.getType(), b.getData());
-                double vx = block.getLocation().getX() - x;
-                double vy = block.getLocation().getY() - y;
-                double vz = block.getLocation().getZ() - z;
+                @SuppressWarnings("deprecation") var block = b.getWorld().spawnFallingBlock(b.getLocation().add(0.5, 0.5, 0.5), b.getType(), b.getData());
+                var vx = block.getLocation().getX() - x;
+                var vy = block.getLocation().getY() - y;
+                var vz = block.getLocation().getZ() - z;
                 block.setVelocity(new Vector(vx, vy, vz).multiply(.2));
-                CraftFallingSand craft = (CraftFallingSand) block;
+                var craft = (CraftFallingSand) block;
                 craft.getHandle().setSize(0.1F, 0.1F);
             }
         }
         e.blockList().clear();
     }
 
-    @EventHandler public void handle(BlockExplodeEvent event) {
-        Location mid = event.getBlock().getLocation().add(0.5, 0.5, 0.5);
-        double x = mid.getX();
-        double y = mid.getY();
-        double z = mid.getZ();
-        for (Block b : event.blockList()) {
+    @EventHandler
+    public void handle(BlockExplodeEvent event) {
+        var mid = event.getBlock().getLocation().add(0.5, 0.5, 0.5);
+        var x = mid.getX();
+        var y = mid.getY();
+        var z = mid.getZ();
+        for (var b : event.blockList()) {
             if (woolbattle.ingame().destroy(b)) {
-                @SuppressWarnings("deprecation") FallingBlock block = b
-                        .getWorld()
-                        .spawnFallingBlock(b.getLocation().add(0.5, 0.5, 0.5), b.getType(), b.getData());
-                double vx = block.getLocation().getX() - x;
-                double vy = block.getLocation().getY() - y;
-                double vz = block.getLocation().getZ() - z;
+                @SuppressWarnings("deprecation") var block = b.getWorld().spawnFallingBlock(b.getLocation().add(0.5, 0.5, 0.5), b.getType(), b.getData());
+                var vx = block.getLocation().getX() - x;
+                var vy = block.getLocation().getY() - y;
+                var vz = block.getLocation().getZ() - z;
                 block.setVelocity(new Vector(vx, vy, vz).multiply(.2));
-                CraftFallingSand craft = (CraftFallingSand) block;
+                var craft = (CraftFallingSand) block;
                 craft.getHandle().setSize(0.1F, 0.1F);
             }
         }
         event.blockList().clear();
     }
 
-    @EventHandler public void handle(EntityDamageByBlockEvent event) {
+    @EventHandler
+    public void handle(EntityDamageByBlockEvent event) {
         if (event.getEntityType() != EntityType.PLAYER) {
             return;
         }
@@ -81,46 +83,48 @@ public class ListenerExplode extends Listener<EntityExplodeEvent> {
         event.setCancelled(true);
     }
 
-    @SuppressWarnings("deprecation") @EventHandler public void handle(EntityDamageByEntityEvent event) {
+    @SuppressWarnings("deprecation")
+    @EventHandler
+    public void handle(EntityDamageByEntityEvent event) {
         if (event.getEntityType() != EntityType.PLAYER) {
             return;
         }
-        Player p = (Player) event.getEntity();
-        WBUser user = WBUser.getUser(p);
+        var p = (Player) event.getEntity();
+        var user = WBUser.getUser(p);
         if (!user.getTeam().canPlay()) {
             event.setCancelled(true);
             return;
         }
         if (event.getDamager().getType() == EntityType.PRIMED_TNT) {
-            TNTPrimed tnt = (TNTPrimed) event.getDamager();
+            var tnt = (TNTPrimed) event.getDamager();
             if (tnt.hasMetadata("source")) {
-                WBUser source = (WBUser) tnt.getMetadata("source").get(0).value();
+                var source = (WBUser) tnt.getMetadata("source").getFirst().value();
                 if (tnt.getLocation().distance(p.getLocation()) > tnt.getYield()) {
                     event.setCancelled(true);
                     return;
                 }
                 Player a = source.getBukkitEntity();
-                Location loc = p.getLocation().add(0, 0.5, 0);
-                WBUser attacker = WBUser.getUser(a);
+                var loc = p.getLocation().add(0, 0.5, 0);
+                var attacker = WBUser.getUser(a);
                 event.setCancelled(true);
-                double x = loc.getX() - tnt.getLocation().getX();
-                double y = loc.getY() - tnt.getLocation().getY();
+                var x = loc.getX() - tnt.getLocation().getX();
+                var y = loc.getY() - tnt.getLocation().getY();
                 y = Math.max(y, 0.7);
-                double z = loc.getZ() - tnt.getLocation().getZ();
-                Vector direction = new Vector(x, y, z).normalize();
+                var z = loc.getZ() - tnt.getLocation().getZ();
+                var direction = new Vector(x, y, z).normalize();
                 double strength = 0;
-                strength += tnt.getMetadata("boost").get(0).asDouble();
+                strength += tnt.getMetadata("boost").getFirst().asDouble();
 
-                double t = (tnt.getYield() - tnt.getLocation().distance(loc)) / (tnt.getYield() * 2) + 0.5;
+                var t = (tnt.getYield() - tnt.getLocation().distance(loc)) / (tnt.getYield() * 2) + 0.5;
                 strength *= t;
                 strength *= 1.2;
                 if (!p.isOnGround()) {
                     strength *= 1.2;
                 }
 
-                double strengthX = strength;
-                double strengthY = strength;
-                double strengthZ = strength;
+                var strengthX = strength;
+                var strengthY = strength;
+                var strengthZ = strength;
 
                 if (a.equals(p)) {
                     if (p.getLocation().distance(tnt.getLocation()) < 1.3) {
@@ -129,20 +133,18 @@ public class ListenerExplode extends Listener<EntityExplodeEvent> {
                     }
                 }
 
-                Vector velocity = direction.clone();
+                var velocity = direction.clone();
                 velocity.setX(velocity.getX() * strengthX);
                 velocity.setY(1 + (velocity.getY() * strengthY / 5));
                 velocity.setZ(velocity.getZ() * strengthZ);
                 p.setVelocity(velocity);
-                woolbattle.ingame().playerUtil().attack(attacker, user);
+                if (!tnt.hasMetadata("peaceful")) {
+                    woolbattle.ingame().playerUtil().attack(attacker, user);
+                }
             }
         } else if (event.getDamager().getType() == EntityType.SNOWBALL) {
-            Snowball bomb = (Snowball) event.getDamager();
-            if (!bomb.getMetadata("perk").isEmpty() && bomb
-                    .getMetadata("perk")
-                    .get(0)
-                    .asString()
-                    .equals(WoolBombPerk.WOOL_BOMB.getName())) {
+            var bomb = (Snowball) event.getDamager();
+            if (!bomb.getMetadata("perk").isEmpty() && bomb.getMetadata("perk").getFirst().asString().equals(WoolBombPerk.WOOL_BOMB.getName())) {
                 event.setCancelled(true);
             }
         }
