@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023. [DarkCube]
+ * Copyright (c) 2023-2024. [DarkCube]
  * All rights reserved.
  * You may not use or redistribute this software or any associated files without permission.
  * The above copyright notice shall be included in all copies of this software.
@@ -7,14 +7,13 @@
 
 package eu.darkcube.minigame.woolbattle.translation;
 
-import eu.darkcube.minigame.woolbattle.util.Arrays;
-import eu.darkcube.minigame.woolbattle.util.Item;
-import eu.darkcube.system.util.Language;
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import eu.darkcube.minigame.woolbattle.util.Arrays;
+import eu.darkcube.minigame.woolbattle.util.Item;
+import eu.darkcube.system.util.Language;
 
 public class LanguageHelper {
     public static void load() {
@@ -27,9 +26,9 @@ public class LanguageHelper {
             ex.printStackTrace();
         }
         List<String> languageEntries = new ArrayList<>();
-        languageEntries.addAll(Arrays.asList(Message.values()).stream().map(Message::key).collect(Collectors.toList()));
-        languageEntries.addAll(Arrays.asList(Item.values()).stream().map(i -> Message.ITEM_PREFIX + i.getKey()).collect(Collectors.toList()));
-        languageEntries.addAll(Arrays.asList(Item.values()).stream().filter(i -> i.getBuilder().lore().size() > 0).map(i -> Message.ITEM_PREFIX + Message.LORE_PREFIX + i.getKey()).collect(Collectors.toList()));
+        languageEntries.addAll(Arrays.asList(Message.values()).stream().map(Message::key).toList());
+        languageEntries.addAll(Arrays.asList(Item.values()).stream().map(i -> Message.ITEM_PREFIX + i.getKey()).toList());
+        languageEntries.addAll(Arrays.asList(Item.values()).stream().filter(i -> !i.getBuilder().lore().isEmpty()).map(i -> Message.ITEM_PREFIX + Message.LORE_PREFIX + i.getKey()).toList());
         Language.validateEntries(languageEntries.toArray(new String[0]), s -> Message.KEY_PREFIX + s);
     }
 }
